Paging (#1061)
* Startet med paginering for beslutter

* Lagt til paginering på avtaler. Mye refaktorering da de fleste metodene som henter mange avtaler måtte endres

* Refaktorert filtrering for veileder og gjort det noe mer dynamisk

* Oppdatert sånn at bedriftvisning filtrerer på tiltakstype i jpa

* Slettet to tester som nå ikke gav noe verdi da filtreringn skjer i databasen

* Arbeid med sortering i avtaleoversikten

* Litt rydding og annotering med timed i nye repository-kall

* Desc sortering på sistEndret i pagineringsresultetene

* LAger en miminal dao for å ikke sende all avtaledata til listevisning

* Fikset tester grunnet return av minimallistevisning

* Oppdatert beslutter sporring og controller for fetching av beslutter visning list.

Co-authored-by: lundmark.mattias@gmail.com

* fjernet unodvendig logging

* Ble java av kotlinen

* Fikset test og lagt til wiremock-profil på avtaletesteer

* lagt til t.status inn i group by for beslutter oversikt query

Co-authored-by: lundmark.mattias@gmail.com

* Fikset default filtrering på navident

* Ryddet i en lambda for litt mindre kode

* Ryddet i kode, slettet ubrukt repository-kall

---------

Co-authored-by: havardmj <havard.myrvold.johannessen@nav.no>